config/stack.production.yml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  AppInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: ami-0c5199d385b432989
      KeyName: gwx-registry-api
      SecurityGroups:
      - !Ref AppInstanceSG
      Tags:
        -
          Key: Name
          Value: Gameworks Registry API Edge Production
      UserData: !Base64 |
        #!/bin/bash
        sudo apt-get update -qq
        sudo apt-get install -y build-essential git-core nginx libssl-dev libreadline-dev zlib1g-dev libpq-dev

  AppInstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH, HTTP, HTTPS, & Docker Ports
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
  
  DBInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName: gwxregistryproduction
      Engine: postgres
      MasterUsername: db_user
      MasterUserPassword: 'wYWdr4cu^8#q'
      DBInstanceClass: db.t2.small
      AllocatedStorage: 5
      DBSecurityGroups:
        - !Ref DatabaseSG
  
  DatabaseSG:
    Type: AWS::RDS::DBSecurityGroup
    Properties:
      GroupDescription: Security Group for RDS public access
      # public access for the meantime
      DBSecurityGroupIngress:
        - CIDRIP: 0.0.0.0/0
